feat: adjust onboarding of company creation e loading of companies
